ACP-4047 Added new endpoint for pre-order-payment to have proper validation.
